<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:textSize="@dimen/input_text_size"
            android:hint="@string/fibo_input_hint"
            android:id="@+id/numberInput" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:textSize="@dimen/button_text_size"
            android:text="@string/calculate_fibonacci"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/calculateButton" android:layout_marginTop="200dp"
            app:layout_constraintTop_toBottomOf="@+id/numberInput" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <TextView
            android:textSize="@dimen/output_text_size"
            tools:text="1234"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fiboResult" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/calculateButton" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>